--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>9dogs</title>
-    <meta name="description" content="9dogs builds thoughtful mobile apps. Discover Interior AI and more." />
+    <meta name="description" content="9dogs builds thoughtful mobile apps. Discover Interior Design AI and more." />
     <meta name="theme-color" content="#0b1020" />
     <link rel="stylesheet" href="/assets/site.css" />
   </head>
@@ -18,7 +18,7 @@
           <span>9dogs</span>
         </a>
         <div class="navlinks">
-          <a href="/interior-ai/">Interior AI</a>
+          <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
@@ -35,7 +35,7 @@
             get things done—without the clutter.
           </p>
           <div class="cta">
-            <a class="btn primary" href="/interior-ai/">Explore Interior AI</a>
+            <a class="btn primary" href="/interior-ai/">Explore Interior Design AI</a>
             <a class="btn" href="mailto:support@9dogs.com">Contact</a>
           </div>
           <p class="fine" style="margin-top:12px">
@@ -45,7 +45,7 @@
 
         <aside class="card pad" aria-label="Featured app">
           <p class="kicker">Featured</p>
-          <div class="title">Interior AI</div>
+          <div class="title">Interior Design AI</div>
           <p class="muted" style="margin: 0 0 12px;">
             Turn a room photo into style directions, layouts, and realistic redesign concepts—fast.
           </p>
@@ -60,7 +60,7 @@
         <h2>Apps</h2>
         <div class="grid">
           <div class="mini">
-            <b>Interior AI</b>
+            <b>Interior Design AI</b>
             <div class="muted">AI-assisted interior inspiration from your own space.</div>
             <div class="cta" style="margin-top:12px">
               <a class="btn" href="/interior-ai/">Learn more</a>
@@ -81,7 +81,7 @@
       <footer>
         <div class="fine">© <span id="y"></span> 9dogs. All rights reserved.</div>
         <div class="footlinks" aria-label="Footer links">
-          <a href="/interior-ai/">Interior AI</a>
+          <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy Policy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
