--- a/interior-ai/index.html
+++ b/interior-ai/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Interior AI — 9dogs</title>
+    <title>Interior Design AI — 9dogs</title>
     <meta
       name="description"
-      content="Interior AI helps you explore interior design ideas from your own room photos—styles, layouts, and realistic redesign concepts."
+      content="Interior Design AI helps you explore interior design ideas from your own room photos—styles, layouts, and realistic redesign concepts."
     />
     <meta name="theme-color" content="#0b1020" />
     <link rel="stylesheet" href="/assets/site.css" />
@@ -21,7 +21,7 @@
           <span>9dogs</span>
         </a>
         <div class="navlinks">
-          <a href="/interior-ai/">Interior AI</a>
+          <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
@@ -32,7 +32,7 @@
       <section class="hero" aria-label="Hero">
         <div>
           <p class="kicker">Interior design, reimagined</p>
-          <h1 class="h1">Interior AI</h1>
+          <h1 class="h1">Interior Design AI</h1>
           <p class="sub">
             Get instant interior inspiration from a single photo. Explore styles, suggested layouts,
             and redesign concepts you can actually build.
@@ -118,7 +118,7 @@
       <section class="section" aria-label="FAQ">
         <h2>FAQ</h2>
         <div class="mini">
-          <b>Does Interior AI store my photos?</b>
+          <b>Does Interior Design AI store my photos?</b>
           <div class="muted">
             See the privacy policy for details on what’s collected and how it’s used.
           </div>
