--- a/interior-ai/privacy-policy/index.html
+++ b/interior-ai/privacy-policy/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Privacy Policy — Interior AI</title>
-    <meta name="description" content="Privacy policy for the Interior AI mobile app by 9dogs." />
+    <title>Privacy Policy — Interior Design AI</title>
+    <meta name="description" content="Privacy policy for the Interior Design AI mobile app by Qiaochun Wei." />
     <meta name="theme-color" content="#0b1020" />
     <link rel="stylesheet" href="/assets/site.css" />
   </head>
@@ -18,7 +18,7 @@
           <span>9dogs</span>
         </a>
         <div class="navlinks">
-          <a href="/interior-ai/">Interior AI</a>
+          <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
@@ -29,7 +29,8 @@
       <article class="doc" aria-label="Privacy policy">
         <h1>Privacy Policy</h1>
         <p class="fine" style="margin: 0;">
-          For <b>Interior AI</b> (the “App”), provided by <b>9dogs</b> (“we”, “us”).<br />
+          This privacy policy applies to <b>Interior Design AI</b> (the “Application”) for mobile devices that was created by
+          <b>Qiaochun Wei</b> (the “Service Provider”) as a Freemium service.<br />
           <b>Effective date:</b> December 29, 2025
         </p>
 
@@ -53,7 +54,7 @@
 
         <h2 id="summary">Summary</h2>
         <p>
-          This policy explains what information we collect when you use Interior AI, how we use it,
+          This policy explains what information we collect when you use Interior Design AI, how we use it,
           and the choices you have. If you have questions or want to request deletion, email
           <a href="mailto:app@9dogs.com">app@9dogs.com</a>.
         </p>
@@ -79,11 +80,11 @@
             general region inferred from settings/IP address).
           </li>
           <li>
-            <b>Diagnostics</b> (crash logs and performance data) to help us fix bugs and improve reliability.
+            <b>Diagnostics</b> (crash logs and performance data) to help us fix bugs and improve reliability (for example, via Sentry).
           </li>
           <li>
             <b>Usage data</b> (for example, which screens are visited and which features are used), in aggregated
-            or de-identified form where possible.
+            or de-identified form where possible (for example, via Amplitude).
           </li>
           <li>
             <b>Device identifiers</b> (for example, Android ID/SSAID or iOS IDFV) used to help prevent abuse
@@ -119,6 +120,9 @@
             Gemini APIs). This may include sending uploaded images and related prompts to the provider.
           </li>
           <li>
+            <b>Analytics and crash reporting</b> (for example, Amplitude and Sentry) to understand usage and improve stability.
+          </li>
+          <li>
             <b>Purchases and subscriptions</b> (for example, RevenueCat to manage entitlements/credits, and the
             relevant app store for billing).
           </li>
@@ -135,6 +139,8 @@
           Third-party policies (non-exhaustive):
           <a href="https://supabase.com/privacy">Supabase</a>,
           <a href="https://policies.google.com/privacy">Google</a>,
+          <a href="https://sentry.io/privacy/">Sentry</a>,
+          <a href="https://amplitude.com/privacy">Amplitude</a>,
           <a href="https://www.revenuecat.com/privacy">RevenueCat</a>,
           <a href="https://www.apple.com/legal/privacy/">Apple</a>.
         </p>
@@ -205,7 +211,7 @@
         <p>
           If you have questions or requests, contact:
           <br />
-          <b>9dogs</b>
+          <b>Qiaochun Wei</b>
           <br />
           Email: <a href="mailto:app@9dogs.com">app@9dogs.com</a>
         </p>
@@ -216,7 +222,7 @@
       </article>
 
       <footer>
-        <div class="fine">© <span id="y"></span> 9dogs • <a href="/interior-ai/">Interior AI</a></div>
+        <div class="fine">© <span id="y"></span> 9dogs • <a href="/interior-ai/">Interior Design AI</a></div>
         <div class="footlinks" aria-label="Footer links">
           <a href="/">Home</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
