--- a/interior-ai/terms-and-conditions/index.html
+++ b/interior-ai/terms-and-conditions/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Terms &amp; Conditions — Interior AI</title>
-    <meta name="description" content="Terms and conditions for the Interior AI mobile app by 9dogs." />
+    <title>Terms &amp; Conditions — Interior Design AI</title>
+    <meta name="description" content="Terms and conditions for the Interior Design AI mobile app by Qiaochun Wei." />
     <meta name="theme-color" content="#0b1020" />
     <link rel="stylesheet" href="/assets/site.css" />
   </head>
@@ -18,7 +18,7 @@
           <span>9dogs</span>
         </a>
         <div class="navlinks">
-          <a href="/interior-ai/">Interior AI</a>
+          <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
@@ -29,7 +29,8 @@
       <article class="doc" aria-label="Terms and conditions">
         <h1>Terms &amp; Conditions</h1>
         <p class="fine" style="margin: 0;">
-          These terms apply to <b>Interior AI</b> (the “App”), provided by <b>9dogs</b> (“we”, “us”).<br />
+          These terms and conditions apply to the <b>Interior Design AI</b> app (the “Application”) for mobile devices that was created by
+          <b>Qiaochun Wei</b> (the “Service Provider”) as a Freemium service.<br />
           <b>Effective date:</b> December 29, 2025
         </p>
 
@@ -119,6 +120,13 @@
           The App may rely on third-party services (for example, AI providers, infrastructure providers, and purchase
           providers). Your use of those services may be subject to their own terms and policies.
         </p>
+        <p class="fine" style="margin-top: 10px;">
+          Third-party terms (non-exhaustive):
+          <a href="https://policies.google.com/terms">Google Play Services</a>,
+          <a href="https://sentry.io/terms/">Sentry</a>,
+          <a href="https://amplitude.com/terms">Amplitude</a>,
+          <a href="https://www.revenuecat.com/terms">RevenueCat</a>.
+        </p>
 
         <h2 id="disclaimer">Disclaimers</h2>
         <p>
@@ -129,7 +137,7 @@
 
         <h2 id="limitation">Limitation of liability</h2>
         <p>
-          TO THE MAXIMUM EXTENT PERMITTED BY LAW, 9DOGS WILL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL,
+          TO THE MAXIMUM EXTENT PERMITTED BY LAW, THE SERVICE PROVIDER WILL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL,
           CONSEQUENTIAL, OR PUNITIVE DAMAGES, OR ANY LOSS OF PROFITS, DATA, USE, OR GOODWILL, ARISING OUT OF OR RELATED
           TO YOUR USE OF THE APP.
         </p>
@@ -158,7 +166,7 @@
       </article>
 
       <footer>
-        <div class="fine">© <span id="y"></span> 9dogs • <a href="/interior-ai/">Interior AI</a></div>
+        <div class="fine">© <span id="y"></span> 9dogs • <a href="/interior-ai/">Interior Design AI</a></div>
         <div class="footlinks" aria-label="Footer links">
           <a href="/">Home</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
@@ -172,4 +180,3 @@
     </script>
   </body>
 </html>
-
