--- a/interior-ai/index.html
+++ b/interior-ai/index.html
@@ -24,6 +24,7 @@
           <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
+          <a href="/contact/">Contact</a>
         </div>
       </nav>
     </header>
@@ -143,6 +144,7 @@
         <div class="footlinks" aria-label="Footer links">
           <a href="/interior-ai/privacy-policy/">Privacy Policy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
+          <a href="/contact/">Contact</a>
           <a href="mailto:support@9dogs.com">Support</a>
         </div>
       </footer>
