--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
+          <a href="/contact/">Contact</a>
         </div>
       </nav>
     </header>
@@ -84,6 +85,7 @@
           <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy Policy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
+          <a href="/contact/">Contact</a>
         </div>
       </footer>
     </main>
