--- a/interior-ai/terms-and-conditions/index.html
+++ b/interior-ai/terms-and-conditions/index.html
@@ -21,6 +21,7 @@
           <a href="/interior-ai/">Interior Design AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
           <a href="/interior-ai/terms-and-conditions/">Terms</a>
+          <a href="/contact/">Contact</a>
         </div>
       </nav>
     </header>
